--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -29,6 +29,22 @@ services:
       - ./slave/data:/var/lib/mysql
     networks:
       - overlay
+  
+  mysql_slave2:
+    image: mysql:8
+    env_file:
+      - ./slave2/mysql_slave.env
+    container_name: "mysql_slave2"
+    restart: "no"
+    ports:
+      - 6606:3306
+    depends_on:
+      - mysql_master
+    volumes:
+      - ./slave2/conf/mysql.conf.cnf:/etc/mysql/conf.d/mysql.conf.cnf
+      - ./slave2/data:/var/lib/mysql
+    networks:
+      - overlay
 
 networks:
   overlay:
