--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,10 +9,8 @@ services:
     ports:
       - 4406:3306
     volumes:
-      - ./master/conf/mysql.conf.cnf:/etc/mysql/conf.d/mysql.conf.cnf
+      - ./master/my.cnf:/etc/mysql/my.cnf
       - ./master/data:/var/lib/mysql
-    networks:
-      - overlay
 
   mysql_slave:
     image: mysql:8
@@ -25,10 +23,8 @@ services:
     depends_on:
       - mysql_master
     volumes:
-      - ./slave/conf/mysql.conf.cnf:/etc/mysql/conf.d/mysql.conf.cnf
+      - ./slave/my.cnf:/etc/mysql/my.cnf
       - ./slave/data:/var/lib/mysql
-    networks:
-      - overlay
   
   mysql_slave2:
     image: mysql:8
@@ -41,11 +37,7 @@ services:
     depends_on:
       - mysql_master
     volumes:
-      - ./slave2/conf/mysql.conf.cnf:/etc/mysql/conf.d/mysql.conf.cnf
+      - ./slave2/my.cnf:/etc/mysql/my.cnf
       - ./slave2/data:/var/lib/mysql
-    networks:
-      - overlay
 
-networks:
-  overlay:
 
